Finished About Section, renamed configs => variables & created Configs file to spicific colors(classes)

--- a/src/app.sass
+++ b/src/app.sass
@@ -1,15 +1,20 @@
 @import /src/assets/sass/resets
+@import /src/assets/sass/variables
 @import /src/assets/sass/configs
 
+// Global Rules
 html 
   scroll-behavior: smooth
 
 #root
   min-height: 100%
   font-family: 'Poppins', Arial, sans-serif
-  background: $c-bg-primary
+  background: $c-dark
   height: 3000px
 
 .container
   @include xl-screens
     width: 1110px !important
+
+section:not(.hero)
+  padding-top: 5rem
