--- a/src/common/linkBtn/style.sass
+++ b/src/common/linkBtn/style.sass
@@ -1,16 +1,15 @@
-@import /src/assets/sass/configs
+@import /src/assets/sass/variables
 
 .btn-primary
-  background-color: $c-accent !important
-  color: $c-text-secondary !important
-  border: 1px solid $c-accent !important
+  background-color: $c-primary !important
+  color: $c-dark!important
+  border: 1px solid $c-primary !important
 
 .btn-outline-primary
   background-color: #0000 !important
-  color: $c-text-primary !important
-  border: 1px solid $c-text-ordinary !important
+  color: $c-light !important
+  border: 1px solid $text-secondary !important
 
 .btn-primary, .btn-outline-primary
   font-size: .8rem !important
   letter-spacing: .1em
-  font-weight: 600 !important
