--- a/src/assets/sass/_configs.sass
+++ b/src/assets/sass/_configs.sass
@@ -1,24 +1,22 @@
-// Bootstrap Breakpoints
-@mixin sm-screens
-  @media (min-width: 576px)
-    @content
-@mixin md-screens
-  @media (min-width: 768px)
-    @content
-@mixin lg-screens
-  @media (min-width: 992px)
-    @content
-@mixin xl-screens
-  @media (min-width: 1200px)
-    @content
-@mixin xxl-screens
-  @media (min-width: 1400px)
-    @content
+@import /src/assets/sass/variables
 
-// Common Colors
-$c-accent: #ffbd39
-$c-text-primary: #fff
-$c-text-secondary: #000
-$c-text-ordinary:#999
-$c-bg-primary: #000
-$c-bg-secondary: rgba(255, 255, 255, 0.1)
+// Colors
+$colors: ("primary": $c-primary, "light": $c-light, "dark": $c-dark)
+@each $name, $value in $colors
+
+  .bg-#{$name}.bg-#{$name}
+    background-color: $value !important
+
+  .text-#{$name}.text-#{$name}
+    color: $value !important
+
+.bg-secondary.bg-secondary
+  background-color: $bg-secondary !important
+
+.text-secondary.text-secondary
+  color: $text-secondary !important
+
+// Font Weights
+@for $i from 1 through 9
+  .fw-#{$i}00
+    font-weight: $i * 100 !important
