--- a/src/components/header/style.sass
+++ b/src/components/header/style.sass
@@ -1,7 +1,7 @@
-@import /src/assets/sass/configs
+@import /src/assets/sass/variables
 
 .navbar
-  background-color: $c-bg-primary
+  background-color: $c-dark
   width: 100%
   z-index: 1000
   &.sleep
@@ -13,15 +13,11 @@
     transform: translateY(0%)
 
 .navbar-brand
-  font-weight: 900
   font-size: 1.5rem
 
-.nav-link
-  color: $c-text-primary
-
+.nav-link 
   span
     position: relative
-    color: inherit
 
     &::after
       content: ""
@@ -32,17 +28,14 @@
       width: 0
       height: 2px
       border-radius: 10px
-      background-color: $c-accent
+      background-color: $c-primary
       transition: width .3s
 
-  &:hover
-    color: $c-text-primary
-
-    span::after
-      width: 100%
+  &:hover span::after
+    width: 100%
 
   &.active
-    color: $c-accent !important
+    color: $c-primary !important
 
     span::after
       width: 100%
