Changed the way to scroll using nav-links and added func to know the link is active or not

--- a/src/layout/header/style.sass
+++ b/src/layout/header/style.sass
@@ -15,9 +15,10 @@
 .navbar-brand
   font-size: 1.5rem
 
-.nav-link 
+.nav-link
   span
     position: relative
+    pointer-events: none
 
     &::after
       content: ""
