Changed Navbar Toggler Icon

--- a/src/layout/header/style.sass
+++ b/src/layout/header/style.sass
@@ -42,3 +42,11 @@
 
     span::after
       width: 100%
+
+.navbar-toggler
+  path
+    stroke: $text-secondary
+  span
+    padding-top: .09rem
+    font-size: 1rem
+    letter-spacing: .05em
