--- a/src/assets/sass/_resets.sass
+++ b/src/assets/sass/_resets.sass
@@ -1,29 +1,29 @@
-*, *::before, *::after 
+*, *::before, *::after
   box-sizing: border-box
-  
-* 
+
+*
   margin: 0
 
 html
   height: 100%
 
 body
-  height: 100% 
-  line-height: 1.5
+  height: 100%
+  line-height: 1.8 !important
   -webkit-font-smoothing: antialiased
 
-img, picture, video, canvas, svg 
+img, picture, video, canvas, svg
   display: block
   max-width: 100%
 
-input, button, textarea, select 
+input, button, textarea, select
   font: inherit
 
-p, h1, h2, h3, h4, h5, h6 
+p, h1, h2, h3, h4, h5, h6
   overflow-wrap: break-word
 
-#root, #__next 
+#root, #__next
   isolation: isolate
 
-li 
+li
   list-style: none
