Added stroke and fill classes and svg in Blog Compnent

--- a/src/assets/sass/_configs.sass
+++ b/src/assets/sass/_configs.sass
@@ -11,6 +11,12 @@ $colors: ("primary": $c-primary, "light": $c-light, "dark": $c-dark)
     color: $value !important
     transition: color .3s
 
+  .fill-#{$name}
+    fill: $value
+
+  .stroke-#{$name}
+    fill: $value
+
 .bg-secondary.bg-secondary
   background-color: $bg-secondary !important
 
