Fixed Stroke Class

--- a/src/assets/sass/_configs.sass
+++ b/src/assets/sass/_configs.sass
@@ -15,7 +15,7 @@ $colors: ("primary": $c-primary, "light": $c-light, "dark": $c-dark)
     fill: $value
 
   .stroke-#{$name}
-    fill: $value
+    stroke: $value
 
 .bg-secondary.bg-secondary
   background-color: $bg-secondary !important
