Changed Secondary bg color to have full opacity

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -20,4 +20,4 @@ $c-primary: #ffbd39
 $c-light: #fff
 $c-dark: #000
 $text-secondary: #999
-$bg-secondary: rgba(255, 255, 255, 0.1)
+$bg-secondary: #1a1a1a
