--- a/src/assets/poppins.css
+++ b/src/assets/poppins.css
@@ -1,41 +1,41 @@
 @font-face {
   font-family: "Poppins";
-  src: url("./font/Poppins-Regular.ttf") format("truetype");
+  src: url(../font/Poppins-Regular.ttf) format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("./font/Poppins-Medium.ttf") format("truetype");
+  src: url(../font/Poppins-Medium.ttf) format("truetype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("./font/Poppins-SemiBold.ttf") format("truetype");
+  src: url(../font/Poppins-SemiBold.ttf) format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("./font/Poppins-Bold.ttf") format("truetype");
+  src: url(../font/Poppins-Bold.ttf) format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("./font/Poppins-ExtraBold.ttf") format("truetype");
+  src: url(../font/Poppins-ExtraBold.ttf) format("truetype");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("./font/Poppins-Black.ttf") format("truetype");
+  src: url(../font/Poppins-Black.ttf) format("truetype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
